--- a/learn/src/Compnents/Button/button.css
+++ b/learn/src/Compnents/Button/button.css
@@ -8,8 +8,15 @@
     position: relative;
     top: 50px;
     margin-top: 10px;
+    width: 15vw;
+    height: 8vh;
   }
   
   .appButton{
-      filter: drop-shadow(2px 2px 2px rgba(0,0,0,0.295));
+      filter: drop-shadow(2px 2px 2px rgba(24, 22, 22, 0.295));
   } 
+
+  .appButton:hover{
+    background-color: rgb(92, 91, 91);
+    color: #FFFFFF;
+  }
