--- a/learn/src/Compnents/Model/box.css
+++ b/learn/src/Compnents/Model/box.css
@@ -15,8 +15,8 @@
     margin: 30px auto;
     margin-left: auto;
     padding: 50px;
-    border: 2px solid rgb(224, 222, 222);
-    filter: drop-shadow(2px, 2px, 2px rgba(0, 0, 0, 0.295));
+    border: none;
+    filter: drop-shadow(2px 4px 6px rgba(0,0,0,0.315));
     overflow: auto;
     border-radius: 10px;
 }
@@ -24,11 +24,16 @@
 .button_popup {
     cursor: pointer;
     border: 1px solid #999;
-    border-radius: 50%;
-    position: fixed;
-    right: 37.5%;
-    bottom: 95%;
-    width: 30px;
-
+    position: absolute;
+    right: 20px;
+    top: 15px;
+    border-radius: 2px ;
+    
+   
 }
 
+.button_popup:hover{
+    background-color: #999;
+    color:#fff;
+   
+}
